render the datamap container divs in cycle and mount after
this commit moves the containers for the datamaps from the index.html to
our cycle application. we then get the containers after they have been
rendered to the DOM by selecting for them using the observable exposed
for the selector in the DOM driver.

we then get the container in addition to the statistics in the map
driver and either initialize or clear our datamap instance accordingly.

there is an "alernativeView" function that shows how you can toggle the
view on and off and the map driver will do the right thing. (warning:
mounting d3 maps is expensive as hell, so don't actually rip out maps
constantly in a real app just like you wouldn't in a react app)

--- a/index.html
+++ b/index.html
@@ -19,20 +19,15 @@
         width: 33%;
         height: 100%;
       }
-      .asia {
+      .datamap-asia {
         left: 33%;
       }
-      .us {
+      .datamap-us {
         left: 66%;
       }
     </style>
   </head>
   <body>
-    <div id="datamap" class="sections">
-      <div id="datamap-europe"></div>
-      <div id="datamap-asia" class="asia"></div>
-      <div id="datamap-us" class="us"></div>
-    </div>
     <div id="app">
     </div>
     <script src="build/index.js"></script>
